updated solution to problem from homework

--- a/Lecture03/L3_03_Styling-tables/Solution/typography.css
+++ b/Lecture03/L3_03_Styling-tables/Solution/typography.css
@@ -6,8 +6,13 @@ table tbody:nth-child(odd) tr{
     background: #000;rgb(241, 241, 241)
 }
 
-table td th {
+table, td, th {
     border-width: 1px;
     border-color: rgb(221,221,221);
     border-style: solid;
+}
+
+table tbody tr:hover td {
+    background: rgb(0,0,0);
+    color: rgb(255, 255, 255);
 }
