--- a/Lecture03/L3_08_Create-Typography-CSS/Solution/styles.css
+++ b/Lecture03/L3_08_Create-Typography-CSS/Solution/styles.css
@@ -1,7 +1,21 @@
-blockquote > p{
+blockquote{
     font-style: italic;
+    border-left: 5px solid;
+    border-left-color: rgb(221,221,221);
+    margin: 1.5em 10px;
+    padding: 0.5em 10px;
 }
 
 .author{
     text-align: right;
+}
+
+html{
+    font-family: Helvetica, sans-serif;
+    font-size: 16px;
+    line-height: 1.5;
+}
+
+h1,h2,h3,h4,h5,h6 {
+    font-family: Georgia, serif;
 }
