--- a/Lecture05/L5_01_Article-with-quotes-and-media/Solution/styles.css
+++ b/Lecture05/L5_01_Article-with-quotes-and-media/Solution/styles.css
@@ -30,7 +30,15 @@ body {
 }
 
 blockquote{
-    float:right;
     margin: 0.5rem;
     border-left: 1px gray;
+}
+
+aside {
+    width: 40%;
+    padding-left: .5rem;
+    margin-left: .5rem;
+    float: right;
+    box-shadow: inset 5px 0 5px -5px grey;
+    font-style: italic;
 }
