--- a/Lecture06/L6_02_BoxModel-Articles/Solution/styles.css
+++ b/Lecture06/L6_02_BoxModel-Articles/Solution/styles.css
@@ -7,5 +7,25 @@ html {
 h2{
     font-family: Georgia, sans-serif;
     font-size: 1em;
+    line-height: 1.2;
+}
 
+section{
+    display: flex;
+    justify-content: space-between;
+    max-width: 70vw;
+}
+
+section{
+    position: absolute;
+    margin-left: auto;
+    margin-right: auto;
+    right: 0;
+    top: 50%;
+    left: 50%;
+    transform: translateX(-50%) translateY(-50%);
+}
+
+article{
+    margin: 1em;
 }
