--- a/Lecture07/L7_03_Customer-details-form/Solution/styles.css
+++ b/Lecture07/L7_03_Customer-details-form/Solution/styles.css
@@ -2,34 +2,39 @@ body{
     background: white;
 }
 
-form{
-    background: rgb(173, 216, 230);
-    margin-left: 25rem;
-    margin-right: 25rem;
-    padding: 2rem;
+.body{
+    display: flex;
+    flex-direction: column;
+    background: lightskyblue;
+    padding:2rem;
+    align-items: flex-start;
+    max-width: 20rem;
+    margin-left: 35%;
+}
+
+.container2, .container1{
     display:flex;
     flex-direction: column;
-    align-items: center;
-    flex-wrap: wrap;
+    justify-content: space-between;
 }
 
-form > *{
-    margin-bottom: 0.5rem;
-    margin-top: 0.5rem;
-}
-
-h2{
+.container1 > *, .container2 > *{
+    margin-right: 1rem;
     margin-bottom: 1rem;
 }
 
 input{
-    max-width: 15rem;
+    max-width: 10rem;
 }
 
-html{
-    font-family: Montserat, sans-serif;
+form{
+    display:flex;
+    flex-direction: row;
 }
 
-.female .male{
-    flex: 1 0 50%;
+.sendbtn{
+    display:flex;
+    align-self: center;
+    margin-top:1rem;
 }
+
