--- a/Exams/exam01/04_Budapest/Solutions/styles.css
+++ b/Exams/exam01/04_Budapest/Solutions/styles.css
@@ -121,11 +121,14 @@ main {
 }
 
 .budapest-card {
+    padding-top:1.5rem;
     justify-content: space-around;
-    margin-left: 27rem;
+    align-items: center;
     color: white;
-    margin-top: 1.5rem;
     padding-bottom: 2rem;
+    background-image: linear-gradient(to right, #93660a, #a37716, #b28821, #c2992b, #d1ab36);
+    margin: 0 auto;
+    padding-left:27rem;
 }
 
 .budapest-card h2 {
@@ -148,6 +151,16 @@ main {
     margin-top: .5rem;
     background: #B18904;
     color: white;
+}
+
+.budapest-card .button:hover{
+    font-weight: bold;
+    font-size: 18px;
+    border: 2px solid white;
+    padding: .5rem;
+    background: white;
+    color: #906611;
+    cursor:pointer;
 }
 
 .circles {
@@ -206,6 +219,16 @@ main {
     color: white;
     margin-bottom: .5rem;
     margin-left: 75rem;
+}
+
+.newsletter .newsletterbtn:hover{
+    font-weight: bold;
+    font-size: 18px;
+    border: 2px solid white;
+    padding: .5rem;
+    background: white;
+    color: #906611;
+    cursor:pointer;
 }
 
 .newsletterleft{
