added some imgs

--- a/mySite/styles.css
+++ b/mySite/styles.css
@@ -1,4 +1,4 @@
-html {
+body {
     background: url(./images/viktor-forgacs-1358198-unsplash.jpg) no-repeat center center fixed;
     background-size: cover;
 }
